--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://icon-library.com/images/icon-for-library/icon-for-library-10.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Library Management System</title>
   </head>
   <body>
     <div id="root"></div>
